--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".AddingCities" >
-            <intent-filter>
-                <action android:name="android.intent.action" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        </activity>
+        <activity android:name=".CityInfo" >
+
         </activity>
 
     </application>
