--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.hudomju:swipe-to-dismiss-undo:1.0'
+}
+repositories {
+    mavenCentral()
 }
